Fix datepickers Fix many translations / texts Remove field in activities

--- a/client/dev/partials/indicators/accordeon.html
+++ b/client/dev/partials/indicators/accordeon.html
@@ -53,7 +53,7 @@
 
 				<a class="btn btn-xs btn-default"
 				   ui-sref="main.indicator.reporting({indicatorId: indicator._id})"
-				   ng-if="indicator.main && buttons.reporting"
+				   ng-if="indicator.__mainUsage && buttons.reporting"
 				   translate="shared.reporting"></a>
 			</span>
 
