--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -60,14 +60,11 @@
 					</div>
 
 					<input type="text" 
-						   datepicker-popup="yyyy/MM/dd"
+						   datepicker-popup="longDate"
 						   name="start"
 						   ng-model="form.start"
 						   is-open="startDateOpen"
-						   show-button-bar="false"
 						   ng-click = "startDateOpen = true"
-						   starting-day="1"
-						   show-weeks="0"
 						   ng-disabled="form.useProjectStart"
 						   ng-required="!form.useProjectStart"
 						   ng-max="form.end"
@@ -88,14 +85,11 @@
 					<ng-form name="intermediaryForm">
 						<div class="col-sm-10 form-group" show-errors style="margin: 0">
 							<input type="text" 
-								   datepicker-popup="yyyy/MM/dd"
+								   datepicker-popup="longDate"
 								   name="period"
 								   ng-model="form.intermediaryDates[index]"
 								   is-open="periodDateOpen"
-								   show-button-bar="false"
 								   ng-click="periodDateOpen=true"
-								   starting-day="1"
-								   show-weeks="0"
 								   required
 								   ng-min="form.start"
 								   ng-max="form.end"
@@ -125,14 +119,11 @@
 					</div>
 
 					<input type="text" 
-						   datepicker-popup="yyyy/MM/dd"
+						   datepicker-popup="longDate"
 						   name="end"
 						   ng-model="form.end"
 						   is-open="endDateOpen"
-						   show-button-bar="false"
 						   ng-click="endDateOpen=true"
-						   starting-day="1"
-						   show-weeks="0"
 						   ng-disabled="form.useProjectEnd"
 						   ng-required="!form.useProjectEnd"
 						   ng-min="form.start"
