--- a/client/dev/partials/projects/input-groups.html
+++ b/client/dev/partials/projects/input-groups.html
@@ -8,8 +8,8 @@
 	<table class="table table-bordered table-stripped table-condensed">
 		<thead>
 			<tr>
-				<th style="width:250px" translate>shared.name</th>
-				<th translate>shared.members</th>
+				<th style="width:300px" translate="project.group_name"></th>
+				<th translate="shared.members"></th>
 				<th style="width: 255px;"></th>
 			</tr>
 		</thead>
@@ -21,7 +21,12 @@
 				<td acl-has-project-role="owner" acl-fallback="inputGroup.name">
 					<ng-form name="center">
 						<div class="form-group" show-errors style="margin: 0">
-							<input type="text" name="name" ng-model="inputGroup.name" class="form-control error input-sm" required />
+							<input type="text"
+								   name="name"
+								   placeholder="{{'project.group_name_placeholder'|translate}}"
+								   ng-model="inputGroup.name"
+								   class="form-control error input-sm"
+								   required />
 						</div>
 					</ng-form>
 				</td>
