--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -6,7 +6,7 @@
 		<tr>
 			<th style="width: 55px"></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
-			<th><a ng-click="pred='name';rev=!rev">{{'shared.themes'|translate}}</a></th>
+			<th><a ng-click="pred='name';rev=!rev">{{'indicator.themes'|translate}}</a></th>
 			<th><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
 			<th><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 			<th><a ng-click="pred='indicators';rev=!rev">Indicateurs obligatoires</a></th>
