--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -24,6 +24,7 @@
 			</div>
 		</div>
 
+<!-- 
 		<div class="row" style="margin-bottom: 15px">
 			<label class="col-sm-2 control-label" translate="project.limits"></label>
 			<div class="form-group col-sm-5" show-errors style="margin: 0" acl-has-project-role="owner" acl-fallback="planning.minimum">
@@ -93,7 +94,7 @@
 					   ng-max="planning.orangeMaximum" />
 			</div>
 		</div>
-
+-->
 		<div class="form-group" show-errors>
 			<label for="baseline-input" class="col-sm-2 control-label" translate="project.baseline"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.baseline">
@@ -121,14 +122,11 @@
 					<ng-form name="targetForm">
 						<div class="col-sm-5 form-group" show-errors style="margin: 0">
 							<input type="text" 
-								   datepicker-popup="yyyy/MM/dd"
+								   datepicker-popup="longDate"
 								   name="period"
 								   ng-model="target.period"
 								   is-open="dateOpen"
-								   show-button-bar="false"
 								   ng-click = "dateOpen = true"
-								   starting-day="1"
-								   show-weeks="0"
 								   required
 								   class="form-control" />
 						</div>
