--- a/client/dev/partials/projects/reporting.html
+++ b/client/dev/partials/projects/reporting.html
@@ -1,28 +1,30 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
-	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
-	<li class="active" ng-if="group">{{group.name}}</li>
-	<li class="active" ng-if="entity">{{entity.name}}</li>
-	<li class="active" translate>shared.reporting</li>
+	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li><a ui-sref="main.project.logical_frame" ng-bind="project.name"></a></li>
+
+	<li class="active" translate="shared.reporting" ng-if="!group && !entity"></li>
+	<li ng-if="group || entity">
+		<a ui-sref="main.project.reporting" translate="shared.reporting"></a>
+	</li>
+
+	<li class="active" ng-if="group" ng-bind="group.name"></li>
+	<li class="active" ng-if="entity" ng-bind="entity.name"></li>
 </ol>
 
 <form class="form-horizontal" novalidate>
 	<div class="row">
 		<div class="col-md-6">
 			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label" translate>shared.begin</label>
+				<label for="indicator" class="col-sm-2 control-label" translate="shared.begin"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 						<input type="text" 
-							   datepicker-popup="yyyy/MM/dd"
+							   datepicker-popup="longDate"
 							   name="begin"
 							   ng-model="dates.begin"
 							   is-open="beginDateOpen"
-							   show-button-bar="false"
 							   ng-click = "beginDateOpen = true"
-							   starting-day="1"
-							   show-weeks="0"
 							   required
 							   ng-max="dates.end"
 							   class="form-control" />
@@ -31,25 +33,25 @@
 			</div>
 
 			<div class="form-group">
-				<label for="group-by-input" class="col-sm-2 control-label" translate>shared.columns</label>
+				<label for="group-by-input" class="col-sm-2 control-label" translate="shared.columns"></label>
 				<div class="col-sm-10">
 
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-columns"></i></span>
 						<select class="form-control" id="group-by-input" ng-model="query.groupBy">
-							<option value="day" translate>shared.day</option>
-							<option value="week" translate>shared.week</option>
-							<option value="month" translate>shared.month</option>
-							<option value="year" translate>shared.year</option>
-							<option value="entity" translate>shared.input_entity</option>
-							<option value="group" translate>shared.input_group</option>
+							<option value="day" translate="shared.day"></option>
+							<option value="week" translate="shared.week"></option>
+							<option value="month" translate="shared.month"></option>
+							<option value="year" translate="shared.year"></option>
+							<option value="entity" translate="shared.input_entity"></option>
+							<option value="group" translate="shared.input_group"></option>
 						</select>
 					</div>
 				</div>
 			</div>
 
 			<div class="form-group">
-				<label for="colorize-input" class="col-sm-2 control-label" translate>shared.colorize</label>
+				<label for="colorize-input" class="col-sm-2 control-label" translate="shared.colorize"></label>
 				<div class="col-sm-10">
 					<p class="form-control-static">
 						<input type="checkbox" id="colorize-input" ng-model="presentation.colorize" />
@@ -60,42 +62,39 @@
 		
 		<div class="col-md-6">
 			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label" translate>shared.end</label>
+				<label for="indicator" class="col-sm-2 control-label" translate="shared.end"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 						<input type="text" 
-							   datepicker-popup="yyyy/MM/dd"
+							   datepicker-popup="longDate"
 							   name="end"
 							   ng-model="dates.end"
 							   is-open="endDateOpen"
-							   show-button-bar="false"
 							   ng-click = "endDateOpen = true"
-							   starting-day="1"
-							   show-weeks="0"
-							   required
 							   ng-min="dates.begin"
-							   class="form-control" />
+							   class="form-control"
+							   required />
 					</div>
 				</div>
 			</div>
 
 			<div class="form-group">
-				<label for="display-input" class="col-sm-2 control-label" translate>shared.display</label>
+				<label for="display-input" class="col-sm-2 control-label" translate="shared.display"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-eye"></i></span>
 						<select class="form-control" id="display-input" ng-model="presentation.display">
-							<option value="value" translate>shared.values</option>
-							<option value="targetPart" translate>shared.target_percentage</option>
-							<option value="baselinePart" translate>shared.baseline_percentage</option>
+							<option value="value" translate="shared.values"></option>
+							<option value="targetPart" translate="shared.target_percentage"></option>
+							<option value="baselinePart" translate="shared.baseline_percentage"></option>
 						</select>
 					</div>
 				</div>
 			</div>
 			
 			<div class="form-group">
-				<label for="plot-input" class="col-sm-2 control-label" translate>shared.plot</label>
+				<label for="plot-input" class="col-sm-2 control-label" translate="shared.plot"></label>
 				<div class="col-sm-10">
 					<p class="form-control-static">
 						<input type="checkbox" id="plot-input" ng-model="presentation.plot" />
@@ -119,7 +118,7 @@
 		style="margin-bottom: 10px;"
 		project-csv-save indicators-by-id="indicatorsById" query="query" data="data" cols="cols">
 	<i class="fa fa-download"></i>
-	<span translate>shared.download_table</span>
+	<span translate="shared.download_table"></span>
 </button>
 
 <table class="table table-bordered table-stripped table-condensed project-reporting" ng-init="purposeOpen=true">
@@ -127,7 +126,13 @@
 		<tr>
 			<th ng-show="presentation.plot"></th>
 			<th></th>
-			<th ng-repeat="col in cols">{{col.name || col}}</th>
+			<th ng-repeat="col in cols">
+				<span ng-switch="query.groupBy">
+					<a ng-switch-when="entity" ui-sref="main.project.input_entities_reporting({id: col.id})" ng-bind="col.name"></a>
+					<a ng-switch-when="group" ui-sref="main.project.input_groups_reporting({id: col.id})" ng-bind="col.name"></a>
+					<span ng-switch-default ng-bind="col.name"></span>
+				</span>
+			</th>
 		</tr>
 	</thead>
 	<tbody>
