--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-	<li><a ui-sref="main.indicators" translate>shared.indicators</a></li>
+	<li><a ui-sref="main.indicators" translate="shared.indicators"></a></li>
 	<li class="active">{{indicator.name}}</li>
 </ol>
 
@@ -10,7 +10,7 @@
 		<legend translate="indicator.categorization"></legend>
 
 		<div class="form-group">
-			<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
+			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
 			<div class="col-sm-10">
 				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required acl-has-role="indicator">
 					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
@@ -25,17 +25,28 @@
 			<label for="input-operation" class="col-sm-2 control-label" translate="indicator.operation"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.operation">
 				<select id="input-operation" class="form-control" ng-model="indicator.operation">
-					<option value="parameter" translate="indicator.is_parameter"></option>
-					<option value="common" translate="indicator.is_common"></option>
 					<option value="mandatory" translate="indicator.is_mandatory"></option>
+					<option value="common" translate="indicator.is_common"></option>
+					<option value="parameter" translate="indicator.is_parameter"></option>
 				</select>
 			</div>
 		</div>
 
+		<div class="form-group" ng-if="indicator.operation == 'common' || indicator.operation == 'mandatory'">
+			<label for="input-target" class="col-sm-2 control-label" translate="indicator.target"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.target">
+				<select id="input-target" class="form-control" ng-model="indicator.target">
+					<option value="lower_is_better" translate="indicator.lower_is_better"></option>
+					<option value="higher_is_better" translate="indicator.higher_is_better"></option>
+					<option value="around_is_better" translate="indicator.around_is_better"></option>
+					<option value="non_relevant" translate="indicator.non_relevant"></option>
+				</select>
+			</div>
+		</div>
 	</fieldset>
 
 	<fieldset>
-		<legend translate>indicator.definition</legend>
+		<legend translate="indicator.definition"></legend>
 
 		<div class="form-group" show-errors>
 			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
@@ -47,13 +58,13 @@
 					   name="name"
 					   placeholder="{{'indicator.name_ph'|translate}}"
 					   required />
-			
+
 				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
+			<label for="input-types" class="col-sm-2 control-label" translate="indicator.types"></label>
 
 			<div class="col-sm-10">
 				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required acl-has-role="indicator">
@@ -92,28 +103,28 @@
 		</div>
 
 		<div class="form-group" show-errors>
-			<label for="input-unit" class="col-sm-2 control-label" translate>indicator.unit</label>
+			<label for="input-unit" class="col-sm-2 control-label" translate="indicator.unit"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.unit">
 				<select id="input-unit"
 						name="unit"
 						ng-model="indicator.unit"
 						class="form-control">
-					<option value="" translate>indicator.other</option>
-					<option value="%" translate>indicator.percent</option>
-					<option value="‰" translate>indicator.permille</option>
+					<option value="" translate="indicator.other"></option>
+					<option value="%" translate="indicator.percent"></option>
+					<option value="‰" translate="indicator.permille"></option>
 				</select>
 			</div>
 		</div>
 	</fieldset>
 <!-- 
 	<fieldset>
-		<legend translate>indicator.categorization</legend>
+		<legend translate="indicator.categorization"></legend>
 
 
 	</fieldset>
  -->
 	<fieldset>
-		<legend translate>indicator.computation</legend>
+		<legend translate="indicator.computation"></legend>
 
 		<div class="form-group">
 			<label for="input-sum-allowed" class="col-sm-2 control-label" translate="indicator.time_aggregation"></label>
@@ -145,13 +156,13 @@
 		</div>
 
 		<div class="form-group">
-			<label for="name" class="col-sm-2 control-label" translate>indicator.formulas</label>
+			<label for="name" class="col-sm-2 control-label" translate="indicator.formulas"></label>
 			<div class="col-sm-10">
 				<table class="table table-bordered table-condensed"
 					   ng-repeat="(formulaId, formula) in indicator.formulas"
 					   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].__isValid ? '#ddd' : 'darkred'}}">
 					<tr>
-						<td style="width: 250px" translate>shared.name</td>
+						<td style="width: 250px" translate="shared.name"></td>
 						<td acl-has-role="indicator" acl-fallback="indicator.formulas[formulaId].name">
 							<div class="input-group">
 								<input type="text"
@@ -160,13 +171,13 @@
 									   ng-model="indicator.formulas[formulaId].name" />
 
 								<span class="input-group-btn">
-									<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate>shared.remove</button>
+									<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate="shared.remove"></button>
 								</span>
 							</div>
 						</td>
 					</tr>
 					<tr>
-						<td translate>indicator.formula</td>
+						<td translate="indicator.formula"></td>
 						<td acl-has-role="indicator" acl-fallback="indicator.formulas[formulaId].expression">
 							<input type="text"
 								   class="form-control"
@@ -205,14 +216,14 @@
 				ng-disabled="indicatorForm.$invalid || isUnchanged() || !formulasAreValid"
 				ng-click="save()">
 			<i class="fa fa-floppy-o"></i>
-			<span translate>shared.save</span>
+			<span translate="shared.save"></span>
 		</button>
 
 		<button class="btn btn-default"
 				ng-disabled="isUnchanged()"
 				ng-click="reset()">
 			<i class="fa fa-undo"></i>
-			<span translate>shared.remove_changes</span>
+			<span translate="shared.remove_changes"></span>
 		</button>
 	</div>
 </form>
