--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -12,7 +12,65 @@
 
 <br/><br/>
 
-<indicator-select buttons="edit,reporting" order-field="orderField" user-ctx="userCtx"></indicator-select>
+<div class="indicator-level-1" ng-repeat="theme in hierarchy">
+	<div class="indicator-header" ng-click="theme.open=!theme.open">
+		<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle':!theme.open,'fa-minus-circle':theme.open}"></i>
+		{{(theme.name || 'indicator.no_theme')|translate}}
+		<span class="badge pull-right" style="margin-right: 10px;">{{theme.children.length}}</span>
+	</div>
+
+	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
+		<div class="indicator-header" ng-click="type.open=!type.open">
+			<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle':!type.open,'fa-minus-circle':type.open}"></i>
+			{{(type.name || 'indicator.no_type')|translate}}
+			<span class="badge pull-right" style="margin-right: 10px;">{{type.children.length}}</span>
+		</div>
+
+		<div class="indicator-level-3" ng-repeat="indicator in type.children | orderBy:orderField" ng-if="type.open">
+
+			<i class="fa fa-ban fa-fw"
+				ng-if="indicator.operation == 'parameter'"
+				tooltip="{{'indicator.is_parameter'|translate}}"
+				tooltip-placement="right"></i>
+
+			<i class="fa fa-question fa-fw"
+				ng-if="indicator.operation == 'common'"
+				tooltip="{{'indicator.is_common'|translate}}"
+				tooltip-placement="right"></i>
+
+			<i class="fa fa-asterisk fa-fw"
+				ng-if="indicator.operation == 'mandatory'"
+				tooltip="{{'indicator.is_mandatory'|translate}}"
+				tooltip-placement="right"></i>
+			
+			<span style="overflow: hidden;">{{indicator.name}}</span>
+
+			<span class="pull-right" style="display: inline-block; width: 180px; position: relative; top: -3px">
+
+				<a class="btn btn-xs btn-default"
+				   ui-sref="main.indicator.edit({indicatorId: indicator._id})"
+				   acl-has-role="indicator"
+				   translate="shared.edit"></a>
+
+				<a class="btn btn-xs btn-default"
+				   ui-sref="main.indicator.edit({indicatorId: indicator._id})"
+				   acl-lacks-role="indicator"
+				   translate="shared.display"></a>
+				
+				<a class="btn btn-xs btn-default"
+				   ui-sref="main.indicator.reporting({indicatorId: indicator._id})"
+				   ng-if="indicator.__mainUsage"
+				   translate="shared.reporting"></a>
+			</span>
+
+			<span class="pull-right">
+				<span style="display: inline-block; width: 40px; text-align: right">{{indicator.__mainUsage}} <i class="fa fa-building-o"></i></span>
+				<span style="display: inline-block; width: 50px; text-align: right">{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i></span>
+			</span>
+		</div>
+	</div>
+</div>
+
 
 <a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
