--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -1,52 +1,96 @@
-<div class="modal-body">
-	<legend translate="shared.choose_indicator"></legend>
-
-	<div class="indicator-level-1" ng-repeat="theme in hierarchy">
-		<div class="indicator-header" ng-click="theme.open=!theme.open">
-			<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !theme.open, 'fa-minus-circle': theme.open}"></i>
-			{{(theme.name || 'indicator.no_theme')|translate}}
-			<span class="badge pull-right" style="margin-right: 10px;">{{theme.numIndicators}}</span>
+<script type="text/ng-template" id="indicator_tree.html">
+	<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
+		<div class="indicator-header" ng-click="type.open=!type.open">
+			<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !type.open, 'fa-minus-circle': type.open}"></i>
+			{{(type.name || 'indicator.no_type')|translate}}
+			<span class="badge pull-right" style="margin-right: 10px;">{{type.children.length}}</span>
 		</div>
 
-		<div class="indicator-level-2" ng-repeat="type in theme.children" ng-if="theme.open">
-			<div class="indicator-header" ng-click="type.open=!type.open">
-				<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !type.open, 'fa-minus-circle': type.open}"></i>
-				{{(type.name || 'indicator.no_type')|translate}}
-				<span class="badge pull-right" style="margin-right: 10px;">{{type.numIndicators}}</span>
+		<div class="indicator-level-3" ng-repeat="indicator in type.children | orderBy:orderField" ng-if="type.open">
+			<i class="fa fa-question fa-fw"
+				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'common'"
+				tooltip="{{'indicator.is_common'|translate}}"
+				tooltip-placement="right"></i>
+
+			<i class="fa fa-asterisk fa-fw"
+				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'mandatory'"
+				tooltip="{{'indicator.is_mandatory'|translate}}"
+				tooltip-placement="right"></i>
+
+			<i class="fa fa-external-link fa-fw"
+				ng-if="project.themes.indexOf(theme._id) === -1"
+				tooltip="{{'indicator.is_mandatory'|translate}}"
+				tooltip-placement="right"></i>
+			
+			<span style="overflow: hidden;">{{indicator.name}}</span>
+
+			<span class="pull-right" style="display: inline-block; width: 180px; position: relative; top: -3px">
+				<a class="btn btn-xs btn-default"
+				   ng-click="choose(indicator._id)"
+				   ng-disabled="forbidden.indexOf(indicator._id) !== -1"
+				   translate="shared.choose"></a>
+			</span>
+
+			<span class="pull-right">
+				<span style="display: inline-block; width: 40px; text-align: right">{{indicator.__mainUsage}} <i class="fa fa-building-o"></i></span>
+				<span style="display: inline-block; width: 50px; text-align: right">{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i></span>
+			</span>
+		</div>
+	</div>
+</script>
+
+<div class="modal-body">
+	<div ng-if="missingIndicators.length">
+		<legend translate="project.missing_mandatory_indicators"></legend>
+		<ul>
+			<li ng-repeat="indicator in missingIndicators">
+				<a ng-click="choose(indicator._id)">{{indicator.name}}</a>
+			</li>
+		</ul>
+		<legend translate="project.other_indicators"></legend>
+	</div>
+
+	<legend ng-if="!missingIndicators.length" translate="shared.indicators"></legend>
+
+	<div ng-if="showAllIndicators || project.themes.length == 0">
+		<div class="indicator-level-1" ng-repeat="theme in hierarchy">
+			<div class="indicator-header" ng-click="theme.open=!theme.open">
+				<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !theme.open, 'fa-minus-circle': theme.open}"></i>
+				{{(theme.name || 'indicator.no_theme')|translate}}
+				<span class="badge pull-right" style="margin-right: 10px;">{{theme.children.length}}</span>
 			</div>
 
-			<div class="indicator-level-3" ng-repeat="indicator in type.children | orderBy:orderField" ng-if="type.open">
-				<i class="fa fa-ban fa-fw"
-					ng-if="indicator.operation == 'parameter'"
-					tooltip="{{'indicator.is_parameter'|translate}}"
-					tooltip-placement="right"></i>
+			<div ng-include="'indicator_tree.html'"></div>
+		</div>
+	</div>
 
-				<i class="fa fa-question fa-fw"
-					ng-if="indicator.operation == 'common'"
-					tooltip="{{'indicator.is_common'|translate}}"
-					tooltip-placement="right"></i>
+	<div ng-if="!showAllIndicators">
+		<div ng-if="project.themes.length == 1">
+			<div style="margin-left: -40px"
+				 ng-include="'indicator_tree.html'"
+				 ng-repeat="theme in hierarchy"
+				 ng-if="theme._id === project.themes[0]"
+ 				 ng-init="theme.open = true"></div>
+		</div>
+		<div ng-if="project.themes.length != 1">
+			<div class="indicator-level-1" ng-repeat="theme in hierarchy" ng-if="project.themes.indexOf(theme._id) !== -1">
+				<div class="indicator-header" ng-click="theme.open=!theme.open">
+					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !theme.open, 'fa-minus-circle': theme.open}"></i>
+					{{(theme.name || 'indicator.no_theme')|translate}}
+					<span class="badge pull-right" style="margin-right: 10px;">{{theme.children.length}}</span>
+				</div>
 
-				<i class="fa fa-asterisk fa-fw"
-					ng-if="indicator.operation == 'mandatory'"
-					tooltip="{{'indicator.is_mandatory'|translate}}"
-					tooltip-placement="right"></i>
-				
-				<span style="overflow: hidden;">{{indicator.name}}</span>
-
-				<span class="pull-right" style="display: inline-block; width: 180px; position: relative; top: -3px">
-					<a class="btn btn-xs btn-default"
-					   ng-click="choose(indicator._id)"
-					   ng-disabled="forbidden.indexOf(indicator._id) !== -1"
-					   translate="shared.choose"></a>
-				</span>
-
-				<span class="pull-right">
-					<span style="display: inline-block; width: 40px; text-align: right">{{indicator.__mainUsage}} <i class="fa fa-building-o"></i></span>
-					<span style="display: inline-block; width: 50px; text-align: right">{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i></span>
-				</span>
+				<div ng-include="'indicator_tree.html'"></div>
 			</div>
 		</div>
 	</div>
+
+	<a ng-click="$parent.showAllIndicators=1" class="pull-right" ng-if="!showAllIndicators && project.themes.length !== 0">
+		<i class="fa fa-eye"></i>
+		<span translate="project.see_other_themes"></span>
+	</a>
+
+	<div style="clear: both"></div>
 </div>
 
 <div class="modal-footer">
