clear both on accordeons

--- a/client/dev/partials/indicators/selector-popup.html
+++ b/client/dev/partials/indicators/selector-popup.html
@@ -44,6 +44,9 @@
 					<span style="display: inline-block; width: 40px; text-align: right">{{indicator.__mainUsage}} <i class="fa fa-building-o"></i></span>
 					<span style="display: inline-block; width: 50px; text-align: right">{{indicator.__inputUsage}} <i class="fa fa-pencil-square-o"></i></span>
 				</span>
+
+				<div style="clear: both"></div>
+
 			</div>
 		</div>
 	</div>
